# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)

## [Unreleased]

### Added
- requirements.txt
- ChangeLog
- Man page
- Add locale (.mo) es_CU
- Add Flag art for Cuba

### Fixed
- Imports for Internationalization with gettext

### Changed
- Migration to Python 3.*
- README.md
- Refactored setup.py
  - Build the translation files (*.mo) using polib
  - Build the binaries using PyInstaller. Fix path sep for each OS
  - Build with updates disabled
  - Set up for Windows/Linux
- Ignore wxPyDeprecationWarning