@@ -1,4 +1,4 @@
 # -*- coding: utf-8 -*-
 
 
-__version__ = '1.0.0'
+__version__ = '1.0.1'
